# tars

./: .env.template  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  MIGRATION.md  README.md  SCRIPTS.md  STATUS.md  docker-compose.yml  pyproject.toml  setup.py  setup.sh  vault-manage.py
agents/main/: CLAUDE.md.example  MEMORY_CONTEXT.md
codex/: README.md  _index.md
config/: CAVEMAN.md  agents.yaml.example  config.yaml.example  mcp.yaml.example  security.yaml.example  tars-memory-decay.service  tars-rescue.service  tars-v2.service  tars.service  team.json  team.json.example
docs/: ARCHITECTURE.md  CREDENTIALS.md  MULTI-AGENT-SPEC.md  QUICKSTART.md  ROADMAP.md  SECURITY.md  TEAM-SPEC.md  TROUBLESHOOTING.md  USERS-SPEC.md
hooks/: pre-commit
installer/: checks.sh  generate.sh  install.sh
scripts/: add-agent.sh  compress-context.sh  google-oauth.sh  google-reauth.py  health-audit.sh  inject-mcp-creds.sh  install-systemd.sh  install-timers.sh  lib-alert.sh  memory-decay.sh  migrate-to-service-account.sh  monitor-container-health.sh  monitor-exposure.sh  monitor-host-security.sh  monitor-integrity.sh  regen-memory-context.sh  remove-agent.sh  rollback-service-account.sh  settings.py  sync.sh  tars-reauth.sh  test-tools.py  update.sh
skills/: README.md  agent-management.md  caveman.yaml  code_review.yaml  debrief.yaml  example.yaml  meet.yaml  registry.json  system_audit.yaml  team-management.md
src/: cli.py  main.py  mcp_server.py
templates/: AGENTS.md  Dockerfile.sandbox  MEMORY.md
tests/: test_access_control.py  test_compressor.py  test_discord_tokens.py
(+110 files in other folders)
